chore: add production app identifiers and OTA update policy

--- a/app.json
+++ b/app.json
@@ -3,15 +3,25 @@
     "name": "VeloRead",
     "slug": "veloread",
     "version": "1.0.0",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 0
+    },
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "veloread",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
+      "bundleIdentifier": "com.ednut15.veloread",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.ednut15.veloread",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
